[Multi-vector broken] Support for multi-vector demo